--- a/models/stagging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/stagging/jaffle_shop/src_jaffle_shop.yml
@@ -2,16 +2,20 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: a clone of a Postgres application database
     database: eruiz_raw
     schema: jaffle_shop
     tables:
       - name: customers
+        description: raw customers data
         columns: 
           - name: id
+            description: primary key
             tests:
               - unique
               - not_null
       - name: orders
+        description: raw orders data
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: {count: 12, period: hour}
