--- a/models/stagging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/stagging/jaffle_shop/src_jaffle_shop.yml
@@ -11,7 +11,7 @@ sources:
         columns: 
           - name: id
             description: primary key
-            tests:
+            data_tests:
               - unique
               - not_null
       - name: orders
@@ -22,7 +22,7 @@ sources:
           error_after: {count: 24, period: hour}
         columns: 
           - name: id
-            tests:
+            data_tests:
               - unique
               - not_null
               - relationships:
